# python-project-template

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.githooks/: pre-push
[package]/: __init__.py  main.py
package/: main.py
tests/: __init__.py  main_test.py
