[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "polars>=1.12.0",
]

[tool.uv]
default-groups = ["lint"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
lint = [
    "ruff>=0.7.0",
]
